# pure_gazebo_playground

gimbal_motor_plugin/: CMakeLists.txt  README.md  gimbal_motor_info_listener.cpp  gimbal_motor_plugin.cpp
gimbal_motor_plugin/msgs/: CMakeLists.txt  gimbal_motor_cmd.proto  gimbal_motor_info.proto
imu_topic_subscriber/: CMakeLists.txt  README.md  build.sh  subscriber.cpp
imu_topic_subscriber/quad_w_imu/: model.config  model.sdf
test_model_db/: database.config
test_model_db/gimbal_on_box/: model.config  model.sdf
test_model_db/pitch_yaw_gimbal/: model.config  model.sdf
test_model_db/pitch_yaw_gimbal/work_files/: README.md
